--- a/lab6/zad1/Makefile
+++ b/lab6/zad1/Makefile
@@ -3,11 +3,12 @@ CFLAGS= -Wall
 
 all:
 	make main
+	rm -f log.txt
 
 main: server.c client.c
 	$(CC) $(CFLAGS) server.c -o server
 	$(CC) $(CFLAGS) client.c -o client
 
 clean:
-	rm -f main *.o *.a
+	rm -f main *.o *.a log.txt server client
 
